# userapp

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/catchers/: mod.rs
src/errors/: our_error.rs
src/fairings/: csrf.rs  db.rs
src/guards/: auth.rs  mod.rs
src/models/: bool_wrapper.rs  our_date_time.rs  pagination.rs  photo_post.rs  post.rs  post_type.rs  text_post.rs  user.rs  user_status.rs  video_post.rs  worker.rs
src/routes/: api.rs  mod.rs  post.rs  user.rs
src/states/: mod.rs
src/views/: template.html.tera
src/views/posts/: _post.html.tera  index.html.tera  show.html.tera
src/views/sessions/: new.html.tera
src/views/users/: _user.html.tera  form.html.tera  index.html.tera  show.html.tera
static/: mini.css
tests/: functional_tests.rs
